<resources>
    <string name="app_name">CryptoCoin</string>
    <string name="book_learn_text">Здесь будут небольшие обучающие тексты,
        после прочтения которых,пользователю будет предлагаться пройти тест</string>
    <string name="soon">Скоро</string>
    <string name="main">Главная</string>
    <string name="top">Топ</string>
    <string name="training">Обучение</string>
    <string name="empty">--</string>
    <string name="convert">Конвертер</string>
    <string name="usd">USD</string>
    <string name="connection_error">Ошибка подключения</string>
    <string name="try_again">Повторить</string>
    <string name="actual_data">У Вас находятся актуальные данные</string>
    <string name="fiat">Фиат</string>
    <string name="cryptovaluts">Криптовалюты</string>
    <string name="american_dollar">Американский доллар</string>
    <string name="russian_ruble">Российский рубль</string>
    <string name="search_hint">Поиск криптоактивов</string>
    <string name="rub">RUB</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="comma">,</string>
    <string name="search">Поиск</string>
    <string name="cancel">Отмена</string>
    <string name="unsuccesful_search">По вашему запросу ничего не найдено</string>
    <string name="change24h">Изменение за 24ч:</string>
    <string name="more_info">Подробная информация</string>
    <string name="change_1h">Изменение за 1ч</string>
    <string name="change_7d">Изменение за 7д</string>
    <string name="volume_24h">Объем торгов за 24ч</string>
    <string name="dominance">Рыночное доминирование</string>
    <string name="market_cap">Рыночная капитализация</string>
    <string name="offer">Предложение</string>
    <string name="circulating_supply">Циркулирующее предложение</string>
    <string name="total_supply">Общее предложение</string>
    <string name="max_supply">Максимальное предложение</string>
    <string name="top5_cap">Топ-5 по капитализации</string>
    <string name="leadersGrowth">Лидеры роста</string>
    <string name="leaders_fall">Лидеры падения</string>
    <string name="list_tracking">Список отслеживания</string>
    <string name="convertation">Конвертировать</string>
    <string name="watchlist_empty">Список наблюдения пуст\nДобавьте актив</string>
    <string name="delete">Удалить</string>
    <string name="change_30d">Изменение за 30д</string>
    <string name="_1h">% 1ч</string>
    <string name="_24h">% 24ч</string>
    <string name="_7d">% 7д</string>
    <string name="_30d">% 30д</string>
    <string name="sort_by">Сорт. по: Рейтинг</string>
    <string name="sort_by_select">Сортировать по</string>
    <string name="_24">24 ч</string>
    <string name="_1">1 ч</string>
    <string name="_7">7 д</string>
    <string name="_30">30 д</string>
    <string name="price_change_timeframe">Период изменения цены</string>
    <string name="rating">Рейтинг</string>
    <string name="price">Цена</string>
    <string name="name">Название</string>
    <string name="percent_change">% Изменение</string>
    <string name="sort_by_rating">Сорт. по: Рейтинг</string>
    <string name="sort_by_name">Сорт. по: Название</string>
    <string name="sort_by_price">Сорт. по: Цена</string>
    <string name="sort_by_percent_change">Сорт. по: % Изменение</string>
    <string name="global_metrics">Глобальные показатели</string>
    <string name="volume24h">Объём за 24ч</string>
    <string name="dominance_btc">Доминир. BTC</string>
    <string name="dominance_eth">Доминир. ETH</string>
    <string name="address_contracts">Контракты</string>
    <string name="what_is_cryptocurrency">Что такое криптовалюта?</string>
    <string name="what_is_blockchain">Что такое блокчейн?</string>
    <string name="consensus_algorithm">Алгоритм консенсуса в блокчейне</string>
    <string name="transaction_fees">Комиссии за транзакции в блокчейне</string>
    <string name="advantages_and_disadvantages_blockchain">Преимущества и недостатки блокчейна</string>
    <string name="attack_51">Атака 51%</string>
    <string name="themes">Темы</string>
    <string name="cryptocoin_learn">CryptoCoin Learn</string>
    <string name="cryptocoin_learn_description">CryptoCoin Learn - это Ваш учебник, который поможет получить начальные знания о мире криптовалют</string>
    <string name="content_learn_cryptocurrency">Криптовалюта похожа на цифровую форму наличных денег, которая функционирует на основе криптографической технологии. То есть это валюта, не имеющая физического аналога и представляющая собой код, который никто не может изменить. С ее помощью вы можете расплатиться за ужин с друзьями или забронировать авиабилеты и отели для отпуска. Поскольку криптовалюта имеет цифровую форму, ее также можно отправить друзьям и родственникам в любую точку мира.\n\nПрямо как банковские переводы, но не совсем. Дело в том, что все традиционные шлюзы для онлайн-платежей принадлежат каким-либо организациям. Они предоставляют сервис для хранения и перевода средств.\n\nВ случае с криптовалютами вы можете воспользоваться бесплатным программным обеспечением для прямой отправки средств другим пользователям, без посредников. Вам, вашим друзьям и тысяче других людей не нужна организация. Вы сами себе банк!\n\nДля использования криптовалюты необязательно регистрироваться на сайте с использованием адреса электронной почты и пароля. Достаточно загрузить на смартфон приложение, и вы сможете отправлять/получать средства в считанные минуты.\n\nТермин криптовалюта является комбинацией слов <b><i>криптография</i></b> и <b><i>валюта</i></b>. Криптография обеспечивает защиту наших средств от кражи с помощью шифрования.\nИтак, эта виртуальная валюта никому не принадлежит и защищена шифрованием. Но зачем она вам, если вы уже пользуетесь приложениями для быстрой оплаты?\n\nКриптовалюта свободна от ограничений. Вы можете использовать криптовалюты беспрепятственно. Централизованные платежные сервисы в свою очередь могут замораживать учетные записи или препятствовать совершению транзакций.\n\nКриптовалюта устойчива к взлому. Устройство сети делает ее устойчивой к атакам хакеров и других злоумышленников.\n\nКриптовалюта – это дешевый и быстрый способ оплаты. Человек на другом конце света может получить от вас средства в считанные секунды. Комиссия за транзакцию значительно меньше, чем комиссия за международный денежный перевод.
    </string>
    <string name="content_learn_blockchain">Блокчейн – это своеобразная база данных. Технически он не особо сложен, это просто набор ячеек в электронной таблице.\n\nУ этой базы данных есть некоторые особенности. <b>Во-первых</b>, данные блокчейна нельзя изменить. Это значит, что вы можете только добавить новую информацию – невозможно просто щелкнуть ячейку и удалить или изменить в ней данные.\n\n<b>Во-вторых</b>, каждая запись (называемая блоком) в базе данных криптографически связана с предыдущей записью. Проще говоря, каждая новая запись должна содержать своего рода цифровой отпечаток (хэш) последней записи. Хэш представляет собой некий набор символов. Он формируется исходя из того, какие транзакции и в каком количестве хранит в себе каждый блок.\n\nПоскольку каждый новый отпечаток связан с последним, в итоге получается цепочка блоков. Или блокчейн.\n\nБлокчейн неизменяем: если изменяется блок, то меняется отпечаток. И поскольку этот отпечаток входит в следующий блок, следующий блок тоже изменяется. А поскольку отпечаток этого блока входит в следующий блок, получается эффект домино, а любое изменение становится очевидным. Вы не можете изменить какую-либо информацию незаметно для всех.
    </string>
</resources>