<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/fiat"
        android:textSize="10pt"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryText"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="@dimen/margin_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/layout_fiat_usd_select"
        android:tag="@string/usd"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="@dimen/margin_border"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/style_for_list_element">

        <ImageView
            android:id="@+id/image_logo_usd_forconvert"
            android:layout_width="@dimen/image_width_list"
            android:layout_height="match_parent"
            android:src="@drawable/usd_logo"
            android:padding="4dp"/>

        <TextView
            android:id="@+id/name_usd_forconvert"
            android:paddingStart="4dp"
            android:textSize="8pt"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/american_dollar"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/symbol_usd_forconvert"
            android:paddingStart="4dp"
            android:paddingTop="3dp"
            android:textSize="6pt"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/usd"
            android:gravity="center|left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_fiat_rub_select"
        android:tag="@string/rub"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="@dimen/margin_border"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/style_for_list_element">

        <ImageView
            android:id="@+id/image_logo_rub_forconvert"
            android:layout_width="@dimen/image_width_list"
            android:layout_height="match_parent"
            android:src="@drawable/rub_logo"
            android:padding="4dp"/>

        <TextView
            android:id="@+id/name_rub_forconvert"
            android:paddingStart="4dp"
            android:textSize="8pt"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/russian_ruble"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/symbol_rub_forconvert"
            android:paddingStart="4dp"
            android:paddingTop="3dp"
            android:textSize="6pt"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/rub"
            android:gravity="center|left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <TextView
        android:text="@string/cryptovaluts"
        android:textSize="10pt"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryText"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="@dimen/margin_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ListView
        android:id="@+id/listview_select_cryptovalute"
        android:divider="@null"
        android:drawSelectorOnTop="true"
        android:dividerHeight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="@dimen/margin_border"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>